networking/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
  type: LoadBalancer
status:
  loadBalancer:
ingress:
    - ip: 146.148.47.155
